fix tag text overflow

--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -74,8 +74,9 @@
 
 <!-- mt-5 for spacing between the Related works heading and the main card -->
 <!-- mb-5 for spacing at the bottom of the page -->
+<!-- h2 class="h4 fw-bold mb-0" used to replicate Pixiv headings -->
 <div class="container mt-5 mb-5">
-  <h4 class="fw-bold mb-0">Related works</h4>
+  <h2 class="h4 fw-bold mb-0">Related works</h2>
   <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-4 mt-1">
     {{- include "fragments/small-tn" .Illust.RelatedWorks }}
   </div>
