--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -44,7 +44,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <div class="d-flex align-items-center">
           <a href="/users/{{ .User.ID }}" class="me-3">
-            <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle" style="width: 62px; height: 62px; object-fit: cover;" />
+            <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle" style="width: 64px; height: 64px;"" />
           </a>
           <div>
             <h5 class="card-title mb-0">{{ .Title }}</h5>
