--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -48,17 +48,23 @@
 </head>
 
 <body data-hx-boost="true" data-hx-swap="outerHTML" data-hx-target="main" data-hx-select="main">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="/img/favicon.png" alt="PixivFE icon" width="30" height="30" class="d-inline-block align-top">
         PixivFE
       </a>
+      <form class="d-flex" action="/tags" method="post" autocomplete="off">
+        <input class="form-control me-2" type="search" name="name" required placeholder="⌕ Search artworks..." aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">
+          <i class="bi bi-search" title="Search"></i>
+        </button>
+      </form>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarContent">
-        <ul class="navbar-nav me-auto mb-lg-0">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="/discovery"><i class="bi bi-compass" title="compass"></i> Discovery</a>
           </li>
@@ -90,12 +96,6 @@
             <a class="nav-link" href="https://codeberg.org/vnpower/pixivfe"><i class="bi bi-globe" title="globe"></i> Source code</a>
           </li>
         </ul>
-        <form class="d-flex" action="/tags" method="post" autocomplete="off">
-          <input class="form-control me-2" type="search" name="name" required placeholder="⌕ Search artworks..." aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">
-            <i class="bi bi-search" title="Search"></i>
-          </button>
-        </form>
       </div>
     </div>
   </nav>
