--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -39,7 +39,7 @@
 </div>
 
   <!-- Work title and user information -->
-  <div class="card">
+  <div class="card mb-4">
     <div class="card-body">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <!-- Artist avatar, artwork name, and artist name -->
