--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -32,7 +32,7 @@
   <div class="accordion mb-5" id="commentsAccordion">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingComments">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseComments" aria-expanded="false" aria-controls="collapseComments">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseComments" aria-expanded="false" aria-controls="collapseComments">
           Comments
         </button>
       </h2>
@@ -45,6 +45,7 @@
           {{- else }}
           <div class="list-group">
             {{ range .Illust.CommentsList }}
+            <!-- Element for a single comment -->
             <div class="list-group-item border-0">
               <div class="d-flex mb-3">
                 <!-- Comment author avatar image -->
@@ -54,7 +55,7 @@
                 <div>
 
                 <!-- Comment author name and date -->
-                <div class="d-flex align-items-bottom mb-2">
+                <div class="d-flex align-items-center mb-2">
                 <a href="/users/{{ .AuthorID }}" class="text-body text-decoration-none me-2">
                     <h6 class="fw-bold mb-0">{{- .AuthorName }}</h6>
                 </a>
@@ -62,7 +63,6 @@
                 </div>
 
                   <!-- Stamp or emoji -->
-                <div class="d-flex align-items-bottom">
                   {{- if .Stamp }}
                   <img class="img-fluid rounded me-2" src="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg"
                     alt="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg" style="width: 96px; height: 96px;" />
@@ -72,7 +72,6 @@
                       {{ raw: parseEmojis(.Context) }}
                   </p>
                   {{ end }}
-                </div>
                 </div>
               </div>
             </div>
