--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -63,6 +63,7 @@
                 </div>
 
                   <!-- Stamp or emoji -->
+                  <!-- TODO: .Stamp occasionally templates in text (which should be part of the main comment text) instead of an image, causing breakage in the layout. See the comment by "Unknown417" on /artworks/107442519 for an example -->
                   {{- if .Stamp }}
                   <img class="img-fluid rounded me-2" src="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg"
                     alt="/proxy/s.pximg.net/common/images/stamp/generated-stamps/{{ .Stamp }}_s.jpg" style="width: 96px; height: 96px;" />
