--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -4,31 +4,34 @@
   <!-- The actual work itself, if not a ugoira -->
   <!-- Tried using a carousel, but doesn't really work that well -->
     {{- range index := .Images }}
-      <div class="row justify-content-center mb-4">
-        <div class="col-10">
-          <a href="{{ .Original }}" target="_blank" id="{{ index + 1 }}" class="d-block text-center">
-            <!-- Bootstrap + Jet wizardry to dynamically scale artwork -->
-            {{- if .Width != 0 && .Height != 0 }}
-              {{- if .Width > .Height }}
-                <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" data-width="{{.Width}}" data-height="{{.Height}}" />
-              {{- else }}
-                <div class="row justify-content-center">
-                  <div class="col-8">
+        <!-- This anchor element provides the link to the full size artwork  -->
+        <a href="{{ .Original }}" target="_blank" id="{{ index + 1 }}" class="d-block text-center">
+        <!-- Bootstrap + Jet wizardry to dynamically scale artwork -->
+        {{- if .Width != 0 && .Height != 0 }}
+        <!-- Display artwork at full width (col-12) if it is in landscape orientation -->
+            {{- if .Width > .Height }}
+            <div class="row justify-content-center mb-4">
+                <div class="col-12">
                     <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" data-width="{{.Width}}" data-height="{{.Height}}" />
-                  </div>
                 </div>
-              {{- end }}
+            </div>
+            <!-- Otherwise, display artwork at reduced width (col-8) if viewing on a device ≥768px in width (on small screens, the artwork is still displayed at full width) -->
             {{- else }}
-              <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" />
+            <div class="row justify-content-center mb-4">
+                <div class="col-sm-12 col-md-8">
+                <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" data-width="{{.Width}}" data-height="{{.Height}}" />
+                </div>
+            </div>
             {{- end }}
-          </a>
-        </div>
-      </div>
+        {{- else }}
+            <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" />
+        {{- end }}
+        </a>
     {{- end }}
   {{- else }}
   <!-- The actual work itself, if a ugoira -->
     <div class="row justify-content-center">
-      <div class="col-12 col-md-8 col-lg-6">
+      <div class="col-12">
         <video class="w-100 rounded" autoplay loop muted disablepictureinpicture playsinline controls poster="{{ .Images[0].Large }}"
           src="/proxy/ugoira.com/{{ .ID }}">
           Unable to load ugoira.
