--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -1,8 +1,8 @@
 {{- extends "layout/default" }}
 {{- block body() }}
 <div class="row justify-content-center">
-<!-- col-9 to ensure that artworks don't take forever to scroll past, especially if there are multiple -->
-<div class="col-9">
+<!-- col-md-9 to ensure that artworks don't take forever to scroll past, especially if there are multiple, but col-sm-12 to display artworks at full width on small devices -->
+<div class="col-sm-12 col-md-9">
 <div class="container">
   <!-- The Artwork fragment; left outside a card -->
   {{- include "fragments/artwork" .Illust }}
@@ -95,7 +95,8 @@
 <div class="container">
   <!-- h2 class="h4 fw-bold mb-0" used to replicate Pixiv headings -->
   <h2 class="h4 fw-bold mb-0">Related works</h2>
-  <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-4 mt-1">
+  <!-- Gradually increase the number of artworks shown per row along with device width -->
+  <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4 mt-1">
     {{- include "fragments/small-tn" .Illust.RelatedWorks }}
   </div>
 </div>
