--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -34,8 +34,8 @@
 
   <!-- mb-5 for spacing between the end of the comments section card and related works -->
   <div class="card mb-5">
-    <div class="card-header">
-      <h2 class="h5 my-2">Comments</h2>
+    <div class="card-header px-4 py-3">
+      <h2 class="h5 p-0 mb-0">Comments</h2>
     </div>
     <div class="card-body p-4 pb-0">
       {{- if .Illust.CommentDisabled == 1 }}
