--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -9,16 +9,17 @@
 
   <!-- Recent works by artist -->
   <div class="card mb-4">
-    <div class="card-body">
-      <div class="d-flex justify-content-between align-items-center mb-3">
+    <div class="card-header px-4 py-3">
+      <div class="d-flex justify-content-between align-items-center">
         <a class="text-decoration-none text-light d-flex align-items-center" href="/users/{{ .Illust.User.ID }}">
           <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle me-2" style="width: 48px; height: 48px;">
           <h2 class="h5 my-2">Other works by {{ .Illust.User.Name }}</h2>
-          <span class="ms-2">&raquo;</span>
         </a>
         {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
-        <a href="{{combinedUrl}}" class="btn btn-outline-primary btn-sm">View all</a>
+        <a href="{{combinedUrl}}" class="btn btn-outline-primary">View all</a>
       </div>
+    </div>
+    <div class="card-body">
       <div class="overflow-auto" id="horizontal-scroll">
         <div class="d-flex flex-nowrap">
           {{- range .Illust.RecentWorks }}
