--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -44,25 +44,27 @@
   <!-- Artwork title and user information -->
   <div class="card mb-4">
     <div class="card-body">
-      <div class="d-flex justify-content-between align-items-top mb-3">
-        <!-- Artwork name, artist avatar + name -->
-        <div class="d-flex align-items-center">
-          <a href="/users/{{ .User.ID }}" class="me-3">
-            <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle" style="width: 64px; height: 64px;"/>
-          </a>
-          <div>
-            <h2 class="h4 fw-bold mb-0">{{ .Title }}</h2>
-            <h3 class="h5"><a href="/users/{{ .User.ID }}" class="text-muted text-decoration-none">{{ .User.Name }}</a></>
+      <div class="row mb-3">
+        <!-- Artist avatar, artwork name, and artist name -->
+        <div class="col-12 col-sm-8 mb-3 mb-sm-0">
+          <div class="d-flex align-items-center">
+            <a href="/users/{{ .User.ID }}" class="me-3">
+              <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle" style="width: 64px; height: 64px;"/>
+            </a>
+            <div>
+              <h2 class="h4 fw-bold mb-0">{{ .Title }}</h2>
+              <h3 class="h5 mb-0"><a href="/users/{{ .User.ID }}" class="text-muted text-decoration-none">{{ .User.Name }}</a></h3>
+            </div>
           </div>
         </div>
         <!-- Bookmark and like buttons -->
-        <div>
+        <div class="col-12 col-sm-4 d-flex justify-content-start justify-content-sm-end align-items-center">
           {{- if isset(.BookmarkData) && LoggedIn }}
-          <a href="/self/deleteBookmark/{{ .BookmarkID }}" class="btn btn-outline-danger">
+          <a href="/self/deleteBookmark/{{ .BookmarkID }}" class="btn btn-outline-danger me-2">
             <i class="bi bi-heart-fill"></i>
           </a>
           {{- else }}
-          <a href="/self/addBookmark/{{ .ID }}" class="btn btn-outline-primary">
+          <a href="/self/addBookmark/{{ .ID }}" class="btn btn-outline-primary me-2">
             <i class="bi bi-heart"></i>
           </a>
           {{- end }}
