change navbar title style

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -51,8 +51,8 @@
   <!-- mb-4 for spacing between the navbar and main content -->
   <nav class="navbar bg-body-tertiary mb-4">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="/img/favicon.png" alt="PixivFE icon" width="30" height="30" class="d-inline-block align-top">
+      <a class="h4 text-decoration-none fw-bold mb-0 d-flex align-items-center" href="/">
+        <img src="/img/favicon.png" alt="PixivFE icon" width="30" height="30" class="d-inline-block me-2">
         PixivFE
       </a>
       <form class="d-flex" action="/tags" method="post" autocomplete="off">
@@ -61,6 +61,7 @@
           <i class="bi bi-search" title="Search"></i>
         </button>
       </form>
+      <!-- Hamburger menu for navigation items -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
