add p-0 to artwork

--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -11,14 +11,14 @@
         <!-- Display artwork at full width (col-12) if it is in landscape orientation -->
             {{- if .Width > .Height }}
             <div class="row justify-content-center mb-4">
-                <div class="col-12">
+                <div class="col-12 p-0">
                     <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" data-width="{{.Width}}" data-height="{{.Height}}" />
                 </div>
             </div>
             <!-- Otherwise, display artwork at reduced width (col-8) if viewing on a device ≥768px in width (on small screens, the artwork is still displayed at full width) -->
             {{- else }}
             <div class="row justify-content-center mb-4">
-                <div class="col-sm-12 col-md-8">
+                <div class="col-sm-12 col-md-8 p-0">
                 <img src="{{ .Large }}" alt="Page {{ index + 1 }}" class="img-fluid rounded mw-100" data-width="{{.Width}}" data-height="{{.Height}}" />
                 </div>
             </div>
@@ -31,7 +31,7 @@
   {{- else }}
   <!-- The actual artwork itself, if a ugoira -->
     <div class="row justify-content-center">
-      <div class="col-12">
+      <div class="col-12 p-0">
         <video class="w-100 rounded" autoplay loop muted disablepictureinpicture playsinline controls poster="{{ .Images[0].Large }}"
           src="/proxy/ugoira.com/{{ .ID }}">
           Unable to load ugoira.
