use svg version of favicon in nav

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -53,8 +53,8 @@
     <div class="container-fluid">
       <!-- Icon and title -->
       <a class="h4 text-decoration-none fw-bold mb-0 d-flex align-items-center" href="/">
-        <img src="/img/favicon.png" alt="PixivFE icon" width="30" height="30" class="d-inline-block me-2">
-        PixivFE
+        <img src="/img/favicon.svg" alt="PixivFE icon" width="30" height="30" class="d-inline-block me-2">
+        <p class="m-0">PixivFE</p>
       </a>
       <!-- Search bar -->
       <form class="d-flex" action="/tags" method="post" autocomplete="off">
